// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`attributes-compiler on compile event handler attribute 1`] = `"element.addEventListener('click', this.handleClick);"`;

exports[`attributes-compiler on compile multiple reactive expressioons in attribute value 1`] = `
"var val = \`\${ (() => {
  try {
    return state.hey;
  } catch (err) {
    return '';
  }
})() || '' } and \${ (() => {
  try {
    return state.blah;
  } catch (err) {
    return '';
  }
})() || '' }\`;
if (val) {
  element.setAttribute('foo', val);
}
UPDATE_COMPILER_PART;"
`;

exports[`attributes-compiler on compile reactive expressioon attribute 1`] = `
"var val = \`\${ (() => {
  try {
    return state.hey;
  } catch (err) {
    return '';
  }
})() || '' }\`;
if (val) {
  element.setAttribute('foo', val);
}
UPDATE_COMPILER_PART;"
`;

exports[`attributes-compiler on compile simple attributes 1`] = `
"element.setAttribute('foo', \`bar\`);
element.setAttribute('bar', \`foo\`);"
`;
